# aula18_api_pydantic

./: README.md  exemplo_00.py  pyproject.toml
src/: controller.py  db.py  main.py  models.py  pokemon.db  schema.py
