[project]
name = "aula18-api-pydantic"
version = "0.1.0"
description = "Projeto em Python condumindo dados de uma API e utilizando Pydantic"
authors = [
    {name = "Rafael Pallisser de Oliveira",email = "rafaelpallisser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
